# LifeOS

./: .dockerignore  .pre-commit-config.yaml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .gitignore  Dockerfile  package.json  pyproject.toml  pytest.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001962a5b0df_add_integrations.py  003cacdbb8a4_add_assesments.py  05fa1118f606_update_courses.py  071824ad23de_update_users.py  4d348f3385a5_remove_lecture_feilds.py  5aa7acc89883_updated_activies_table.py  5bb12fe81a23_add_assesments.py  635e3880faaa_add_assesments.py  733a8489d743_.py  79d5871daf28_.py  806334d53d95_add_lectures.py  9d2d069139fc_update_users.py  a9b8bd19ec21_add_finances.py  b287fd300168_add_assesments.py  b9ca24d8ff3b_add_courses.py  bc429956489e_add_assesments.py  c3d56528e99d_add_integrations.py  c9ada44c2295_create_user_table.py  d7ad75842d84_.py  e27045a90600_add_assesments.py  eed1902dc484_add_finances.py
apps/api/app/: deps.py  main.py  settings.py
apps/api/app/clients/: __init__.py  plaid_api_client.py  plaid_client.py  snaptrade_api_client.py  snaptrade_client.py  soundcloud_api_client.py
apps/api/app/core/: auth.py  exceptions.py
apps/api/app/db/: base.py  models.py
apps/api/app/middleware/: setup.py
apps/api/app/modules/finances/: deps.py
apps/api/app/modules/users/: models.py  repo.py  router.py  schemas.py  service.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py  pytest.ini  test_health.py
apps/api/tests/_shared/factories/: __init__.py  (+3 more)
apps/api/tests/factories/: __init__.py  users.py
(+243 files in other folders)
